[gd_scene load_steps=2 format=3 uid="uid://cqugewlm2umsj"]

[ext_resource type="Script" uid="uid://uvefss4af37v" path="res://Scripts/UI/MenuElements/menu_manager.gd" id="1_l0knh"]

[node name="MenuElements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l0knh")

[node name="Menu_Buttons" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.417
anchor_bottom = 1.0
offset_right = -0.640076
grow_vertical = 2

[node name="Label" type="Label" parent="Menu_Buttons"]
custom_minimum_size = Vector2(139, 23)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.333
anchor_right = 0.625
anchor_bottom = 0.354
offset_left = -3.05176e-05
offset_top = -0.140015
offset_bottom = 0.179993
grow_horizontal = 2
grow_vertical = 2
text = "Godot Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.37
anchor_right = 0.875
anchor_bottom = 0.63
offset_top = 0.399994
offset_right = -6.10352e-05
offset_bottom = -0.400085
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button_Play" type="Button" parent="Menu_Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "New Game"

[node name="Button_Settings" type="Button" parent="Menu_Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Settings"

[node name="Button_Quit" type="Button" parent="Menu_Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Quit"

[connection signal="pressed" from="Menu_Buttons/VBoxContainer/Button_Play" to="." method="_play_pressed"]
[connection signal="pressed" from="Menu_Buttons/VBoxContainer/Button_Settings" to="." method="_settings_pressed"]
[connection signal="pressed" from="Menu_Buttons/VBoxContainer/Button_Quit" to="." method="_quit_pressed"]
